staticfiles/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;300;400;500;600;700&display=swap');

/* UNIVERSAL STYLING */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #f5f5f5;
}

.not-found {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.not-found img{
  max-width: 200px;
}

.not-found .card{
  padding: 5px 20px;
}

.u-button{
  color: white;
  padding: 5px 8px;
  border-radius: 10px;
  background-color: #14133d;
  outline: none !important;
  border-color: none !important;
  box-shadow: none !important;
}

.u-button:hover{
  text-decoration: underline;
}

.u-button:disabled{
  text-decoration: none;
  color: gray;
}

.banner{
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}

@media (max-width: 568px) {
  .banner{
    width: 100%;
    height: 100vh;
    overflow: hidden;
  }
}

.title-card .container{
  padding: 8px 0px;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  border-radius: 5px;
}

.title-card{
  padding-top: 50px;
  padding-left: auto;
  padding-right: auto;
  padding-bottom: 40px;
}

.title-card-banner{
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  background-color: white;
  width: 100%;
  height: 28px;
  max-width: 130px;
  border-radius: 15px;
  box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.5);
}

.title-card-banner h3{
  font-size: 22px;
  font-weight: 600;
}

.tag-pill h6{
  text-align: center;
  padding: 0px 5px;
  font-size: 14px;
  color: rgb(105, 89, 89);
}

.tag-pill{
  background-color: white;
  border-radius: 15px;
  padding: 0 5px;
  height: 18px;
  text-align: center;
  box-shadow: 1px 2px 5px 0px rgba(20, 19, 61, 0.2);
}

.card-btns{
  padding: 5px 10px;
  margin-bottom: 5px;
}
/* UNIVERSAL STYLING */

/* NAVBAR STYLING START */
.logo img{
  width: 100%;
  height: 100%;
  max-width: 100px;
  object-fit: cover;
}

.navbar{
  padding: 10px 30px;
  transition: all 0.4s ease;
}

.nav-item{
  cursor: pointer;
}

.menu-list .nav-item{
  border-radius: 10px;
  padding: 5px 10px;
  background-color: #14133d;
  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.1);
}

.nav-item .nav-link{
  color: white;
}

.navbar.sticky{
  background-color: #14133d;
  padding: 5px 20px;
  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
}

.navbar.sticky .menu-list .nav-item{
  box-shadow: none;
}

.navbar.sticky li a{
  color: white;
}

.navbar.sticky .logo a{
  color: white;
}

.menu-list li{
  padding: 0px 10px;
}

.menu-list li a{
  color: black;
  font-size: 18px;
  font-weight: 400;
}
  
.menu-list li a:hover{
  color: silver;
}

.navbar .logo a{
  color: white;
  font-size: 28px;
  font-weight: 500;
}

.icon{
  font-size: 20px;
  cursor: pointer;
  display: none;
}

.navbar.sticky .icon{
  color: white;
}

.icon.cancel-btn{
  position: absolute;
  right: 30px;
  top: 20px;
}

@media (max-width: 568px) {
  .logo img{
    width: 100%;
    height: 100%;
    max-width: 80px;
    max-height: 50px;
  }
  
  .navbar .menu-list{
    position: fixed;
    top: -0.1%;
    right: -100%;
    width: 100%;
    max-width: 160px;
    max-height: 110px;
    display: block;
    padding: 15px 0;
    text-align: center;
    background-color: #14133d;
    transition: all 0.2s ease;
  }

  .menu-list .nav-item{
    border-radius: none;
    box-shadow: none;
  }

  .icon{
    color: white;
    display: block;
  }

  .icon.hide{
    display: none;
  }

  .navbar.active{
    background-color: #14133d;
    transition: all 0.2s ease;
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
  }

  .navbar.active .icon{
    color: white;
  }

  .navbar.active .logo a{
    color: white;
  }

  .navbar .menu-list.active{
    right: 0%;
  }

  .navbar .menu-list li{
    display: flex;
    justify-content: center;
    margin-top: 40px;
  }

  .navbar .menu-list li a{
    color: white;
    margin-left: 0px;
    font-size: 16px;
  }
  
  .menu-list li a:hover{
    color: silver;
  }
}
/* NAVBAR STYLING END */

/* PROFILE-CARD STYLING */
.profile{
  margin-top: 150px;
}

.profile-card{
  background-color: white;
  width: 380px;
  height: 600px;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  border-radius: 15px;
  box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.5);
  align-items: center;
}

.img1 img{
  width: 100%;
  height: 180px;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  object-fit: cover;
}

.img2 img{
  position: relative;
  display: block;
  margin-left: auto;
  margin-right: auto;
  z-index: 1;
  width: 170px;
  height: 170px;
  border-radius: 50%;
  border: 7px solid whitesmoke;
  margin-top: -90px;
  object-fit: cover;
}

.profile-name{
  padding: 10px 0;
  text-align: center;
}

.profile-name h2{
  font-weight: 600;
  font-size: 18px;
}

.profile-title{
  font-size: 18px;
  font-weight: 400;
  padding: 5px 10px;
  text-align: center;
}

.profile-location{
  font-size: 16px;
  font-weight: 300;
  padding: 5px 10px;
  text-align: center;
}

.profile-socials{
  text-align: center;
  padding: 30px 0;
}

.profile-socials a{
  color: #14133d;
  padding: 0 5px;
}

.profile-socials a:hover{
  transition: all 0.2s ease;
  color: silver;
}

.profile-proj-btn{
  text-align: center;
}

@media (max-width: 568px) {
  .profile{
    margin-top: 110px;
  }

  .profile-card{
    width: 300px;
    height: 520px;
  }

  .profile-title{
    font-size: 16px;
    padding: 10px 20px 10px 20px;
  }

  .img1 img{
    height: 140px;
  }

  .img2 img{
    width: 150px;
    height: 150px;
    margin-top: -90px;
  }
}
/* PROFILE-CARD STYLING END */

/* PROJECTS STYLING */
.projects-card{
  transition: all 0.1s ease;
}

.projects-card:hover{
  transform: scale(1.01);
  border-radius: 5px;
  box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.5);
  border: none;
}

.proj-img img{
  width: 100%;
  height: 160px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  object-fit: cover;
}

.project-tags{
  display: inline-flex;
}
/* PROJECTS STYLING END */

/* ABOUT ME STYLING */
.about-me-lines{
  font-size: 18px;
  padding: 20px 0;
}

.about-me-lines p{
  padding: 10px 0;
}

.skill-stack ul{
  list-style: none;
  padding: 10px;
}

.skill-title{
  padding: 30px 0;
}

.skill-pill{
  background-color: white;
  border-radius: 15px;
  width: 100%;
  max-width: 100px;
  box-shadow: 1px 2px 5px 0px rgba(20, 19, 61, 0.2);
}

.skill-pill li{
  font-size: 15px;
  color: #14133d;
}

.resume-dl button {
  padding: 2px;
  color: white;
  border-radius: 3px;
  cursor: pointer;
  background-color: #14133d;
  transition: all 0.1s;
}

.resume-dl button:hover {
  text-decoration: underline;
}

.resume-dl button:disabled {
  background-color: #ddd;
  color: #888;
  text-decoration: none;
  cursor: default;
}
/* ABOUT ME STYLING END */

/* CONTACT STYLING */
.contact-text{
  padding: 30px 0;
}

.contact-text p{
  font-size: 20px;
  font-weight: 500;
}

.form-group .contact-labels{
  font-size: 16px;
  font-weight: 500;
}

.contact-field{
  padding: 5px 0;
}

.form-control {
  border-color: none;
  box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.3);
}

.form-control:focus {
  border-color: #14133d;
  box-shadow: 0px 5px 10px 0px rgba(20, 19, 61, 0.3);
}

.contact-left-side .col-4{
  display: block;
}

.form-btn{
  text-align: center;
  padding: 20px 0;
}
/* CONTACT STYLING END */

/* FOOTER STYLING */
.footer-card{
  margin-top: 2vh;
  position: static;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: white;
  padding: 20px;
  box-shadow: inset -10px -10px 15px rgba(255, 255, 255, 1.5), 
           inset 10px 10px 15px rgba(70, 70, 70, 0.12);
}

.footer-card .content{
  text-align: center;
}

.footer-card .social-list{
  margin-left: auto;
  margin-right: auto;
  padding: 10px;
}

.social-list a{
  color: #14133d;
  padding: 5px;
}

.social-list a:hover{
  color: silver;
}
/* FOOTER STYLING END */

